--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+#######################################################
+# configuration personnelle
+
+# exclusion du répertoire de configuratrion de PHPStorm
+.idea
