--- a/public/.htaccess
+++ b/public/.htaccess
@@ -28,7 +28,7 @@ DirectoryIndex index.php
     # If you are using Apache aliases to do mass virtual hosting or installed the
     # project in a subdirectory, the base path will be prepended to allow proper
     # resolution of the index.php file and to redirect to the correct URI. It will
-    # work in environments without path prefix as well, providing a safe, one-size
+    # work in environments without path Prefix as well, providing a safe, one-size
     # fits all solution. But as you do not need it in this case, you can comment
     # the following 2 lines to eliminate the overhead.
     RewriteCond %{REQUEST_URI}::$0 ^(/.+)/(.*)::\2$
